made fixed header invisible when closed, so can't be seen by overscrolling

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -35,6 +35,16 @@
     }
 }
 
-.header-font {
-    line-height: $header-height;
+.fixed-header {
+    $transition: map-get($transitions, short);
+    @extend .fixed, .translate-up;
+    top: 0; left: 0;
+    opacity: 0;
+    transition: transform $transition ease-out, opacity 0s $transition;
+
+    &-open {
+        @extend .translate-y-none;
+        opacity: 1;
+        transition: transform $transition ease-out;
+    }
 }
